--- a/materiales.html
+++ b/materiales.html
@@ -5,95 +5,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Materiales</title>
-    <!-- ------------------------------ FONTELLO ------------------------------- -->
-    <link rel="stylesheet" href="./estilos/fontello.css">
-    <!-- ------------------------------ FONTELLO ------------------------------- -->
-    <!-- --------------------------------- CSS --------------------------------- -->
+    <title>Materiales | Dolce vita</title>
+    <link rel="shotcut icon" href="" type="iamge/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./estilos/estilos.css">
-    <!-- --------------------------------- CSS --------------------------------- -->
-    <!-- -------------------------- INICIO BOOTSTRAP --------------------------- -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <!-- ---------------------------- FIN BOOTSTRAP ---------------------------- -->
-
 </head>
 
 <body>
-    <!-- -------------------------- RECTANGULO HEADER -------------------------- -->
-    <div class="rectangulo">
-        <!-- -------------------------- RECTANGULO HEADER -------------------------- -->
-        <!-- ----------------------------- LOGO DOLCE ------------------------------ -->
-        <img class="logo" src="./assets/logo.jpg" alt="logo"></a>
-        <!-- ----------------------------- LOGO DOLCE ------------------------------ -->
-    </div>
-    <header class="header-index">
-        <!-- ------------------------------- NAVBAR -------------------------------- -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-gatips navbar-text">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
-                    <!-- ------------------------------ H1 NAVBAR ------------------------------ -->
-                    <h1 class="text-header">
-                        <a href="dolcevita.html">Dolce vita</a>
-                    </h1>
-                    <!-- ------------------------------ H1 NAVBAR ------------------------------ -->
-                </a>
-                <button class="navbar-toggler boton-nav" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item ">
-                            <!-- ------------------------------- ENLACES -------------------------------- -->
-                            <a class="nav-link" href="vestidos.html">Vestidos</a>
-                            <!-- ------------------------------- ENLACES -------------------------------- -->
-                        </li>
-                        <li class="nav-item ">
-                            <!-- ------------------------------- ENLACES -------------------------------- -->
-                            <a class="nav-link" href="quienesomos.html">Quienes somos</a>
-                            <!-- ------------------------------- ENLACES -------------------------------- -->
-                        </li>
-                        <li class="nav-item">
-                            <!-- ------------------------------- ENLACES -------------------------------- -->
-                            <a class="nav-link" href="materiales.html">Materiales</a>
-                            <!-- ------------------------------- ENLACES -------------------------------- -->
-                        </li>
-                    </ul>
+
+    <header>
+        <div class="rectangulo">
+            <img class="logo" src="./assets/logo.jpg" alt="logo"></a>
+        </div>
+
+        <nav class="navbar">
+            <ul>
+                <li><a href="dolcevita.html">Dolce Vita</a></li>
+                <li><a href="vestidos.html">Vestidos</a></li>
+                <li><a href="materiales.html">Materiales</a></li>
+                <li><a href="contacto.html">contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+
+    <main class="contenedor_DolceVita">
+        <div class="div5">
+            <img src="./assets/image3.jpg">
+        </div>
+        <div class="div6">
+            <div class="info2">
+                <h2>Nuestros materiales</h2>
+                <p>Realizamos una eleccion exhaustiva de nuestras telas<br> priorizando la
+                    calidad y el detalle<br> Uso de telas de fiesta,<br> aten, taftan, tules bordados con flores,<br> La colección presenta confecciones de piezas<br> perlas,
+                    apliques, raso de novias<br> encaje de novias, entre otras.<br> 
+                </p>
+                <div class="input-Box2">
+                    <a class="buttondolce" href="vestidos.html">Nuestros Productos</a>
                 </div>
             </div>
-        </nav>
-        <!-- ------------------------------- NAVBAR -------------------------------- -->
-    </header>
-    <div class="img">
-        <!-- ------------------------------- IMG BODY ------------------------------- -->
-        <img src="./assets/image3.jpg" alt="Imagen materiales" class="img-header">
-        <!-- ------------------------------- IMG BODY ------------------------------- -->
-    </div>
-    <div class="textos-materialescel">
-        <!-- ------------------------------- TITULO -------------------------------- -->
-        <h1 class="tittle-materialescel">Nuestros Materiales</h1>
-        <!-- ------------------------------- TITULO -------------------------------- -->
-        <!-- -------------------------------- TEXTO -------------------------------- -->
-        <p class="parrafo-materialescel">Realizamos una eleccion exhaustiva de nuestras telas, priorizando la
-            calidad y el detalle</p>
-        <!-- -------------------------------- TEXTO -------------------------------- -->
-        <!-- -------------------------------- TEXTO -------------------------------- -->
-        <p class="parrafo-materialescel">Uso de telas de fiesta, saten, taftan, tules bordados con flores, perlas,
-            apliques, raso de novias, encaje de novias, entre otras.</p>
-        <!-- -------------------------------- TEXTO -------------------------------- -->
-        <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
-        <div class="btn-divcel">
-            <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
-            <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
-                    type="submit" value="Nuestros productos" class="btn-reservacel"></a>
-            <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
         </div>
-        <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
-    </div>
+        <div class="arrowright">
+            <a href="contacto.html"><i class="fa-solid fa-arrow-right"></i></a>
+        </div>
+    </main>
+
+
+
     <footer>
-        <section class="footerstyle-materiales">
+        <section class="footerstyle">
             <div class="contenedor_logos">
                 <h3>Seguinos</h3>
                 <div class="logos2">
@@ -104,27 +67,16 @@
                 </div>
             </div>
             <section class="contenedor_imgs">
-                <img src="./assets/correo.png" alt="imgCorreo">
+                <i class="fa-solid fa-truck"></i>
                 <p><b>Envios a todo el país</b></p>
-                <img src="./assets/billetera.png" alt="imgCard">
+                <i class="fa-solid fa-credit-card"></i>
                 <p><b>Todos los medios de pago</b></p>
             </section>
+        </section>
     </footer>
-            <!-- ----------------------------- FONTAWESOME ----------------------------- -->
-            <script src="https://kit.fontawesome.com/4946a7d77f.js" crossorigin="anonymous"></script>
-            <!-- ----------------------------- FONTAWESOME ----------------------------- -->
-    <!-- ------------------------------ ICON-WSP ------------------------------- -->
-    <a href="https://api.whatsapp.com/send?phone=5491167647633&text=Hola,%20quiero%20hacer%20una%20consulta"
-        class="btn-wsp" target="_blank">
-        <i class="icon-whatsapp"></i>
-    </a>
-    <!-- ------------------------------ ICON WSP ------------------------------- -->
-    <!-- ------------------------------ BOOTSTRAP ------------------------------ -->
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
-    </script>
-    <!-- ------------------------------ BOOTSTRAP ------------------------------ -->
+
+
+    <script src="https://kit.fontawesome.com/4946a7d77f.js" crossorigin="anonymous"></script>
 
 </body>
 
