--- a/talles.html
+++ b/talles.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Talles</title>
+    <title>Talles | Dolce vita</title>
     <link rel="shotcut icon" href="" type="iamge/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -17,7 +17,7 @@
 
 
     <div class="button_back">
-        <a href="./vestidos.html"><input type="submit" value="Volver a vestidos" class="btn-volver"></a>
+        <a href="vestidos.html"><input type="submit" value="Volver a vestidos" class="btn-volver"></a>
     </div>
 
 
