--- a/bienvenida.html
+++ b/bienvenida.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div><img src="./assets/imgfondo.jpg" alt="Fondo dolce " class="img-fondo"></div>
+    <div><img src="./assets/fondo-bienvenida.png" alt="Fondo dolce " class="img-fondo"></div>
     <div class="frase-bienvenida">
         <div class="animate__animated animate__fadeInDownBig animate__slow">
             <a href="dolcevita.html">
@@ -23,8 +23,6 @@
                 <img src="./assets/Vector-4.png" alt="" class="vector4">
                 <img src="./assets/Vector.png" alt="" class="vector">
             </a>
-
-
         </div>
     </div>
     <!-- ---------------------------- Js ---------------------------- -->
