Medias queries de bienvenida

--- a/bienvenida.html
+++ b/bienvenida.html
@@ -22,6 +22,7 @@
                 <img src="./assets/Vector-1.png" alt="" class="vector1">
                 <img src="./assets/Vector-4.png" alt="" class="vector4">
                 <img src="./assets/Vector.png" alt="" class="vector">
+                <img src="./assets/dolce-frase.png" alt="" class="dolce-img">
             </a>
         </div>
     </div>
