--- a/index.html
+++ b/index.html
@@ -5,17 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./estilos/estilos.css">
-    <link rel="stylesheet" href="./estilos/animate.min.css">
-    <title>Bienvenida</title>
+    <title>Bienvenida | Dolce vita</title>
+    <link rel="shotcut icon" href="" type="iamge/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 
 <body>
-    <div class="fondo-bienvenida"></div>
+    <div><img src="./assets/fondo-bienvenida.png" alt="Fondo dolce " class="img-fondo"></div>
     <div class="frase-bienvenida">
-        <h1 class="animate__animated animate__fadeInDownBig animate__slow">
-            <a href="dolcevita.html">Dolce vita</a>
-        </h1>
+        <div class="animate__animated animate__fadeInDownBig animate__slow">
+            <a href="dolcevita.html">
+                <img src="./assets/Vector-2.png" alt="" class="vector2">
+                <img src="./assets/Vector-1.png" alt="" class="vector1">
+                <img src="./assets/Vector-4.png" alt="" class="vector4">
+                <img src="./assets/Vector.png" alt="" class="vector">
+                <img src="./assets/dolce-frase.png" alt="" class="dolce-img">
+            </a>
+        </div>
     </div>
     <!-- ---------------------------- Js ---------------------------- -->
     <script src="./js/wow.min.js"></script>
