Cambios en bienvenida

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div><img src="./assets/fondo-bienvenida.png" alt="Fondo dolce " class="img-fondo"></div>
+    <div X><img src="./assets/fondo-bienvenida.png" alt="Fondo dolce"  class="img-fondo"></div>
     <div class="frase-bienvenida">
         <div class="animate__animated animate__fadeInDownBig animate__slow">
             <a href="dolcevita.html">
