--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
 
     <header>
         <div class="rectangulo">
-            <img class="logo" src="../assets/logo.jpg" alt="logo"></a>
+            <img class="logo" src="./assets/logo.jpg" alt="logo"></a>
         </div>
 
         <nav class="navbar">
@@ -32,7 +32,7 @@
 
     <main class="contenedor-contacto">
         <div class="div3">
-            <img src="../assets/princesaGlamour.png">
+            <img src="./assets/princesaGlamour.png">
         </div>
         <div id="verticle-line">
         </div>
