--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-    <div X><img src="./assets/fondo-bienvenida.png" alt="Fondo dolce"  class="img-fondo"></div>
+    <div class="bienvenida-compu">
+    <div><img src="./assets/fondo-bienvenida.png" alt="Fondo dolce"  class="img-fondo"></div>
     <div class="frase-bienvenida">
         <div class="animate__animated animate__fadeInDownBig animate__slow">
             <a href="dolcevita.html">
@@ -22,10 +23,20 @@
                 <img src="./assets/Vector-1.png" alt="" class="vector1">
                 <img src="./assets/Vector-4.png" alt="" class="vector4">
                 <img src="./assets/Vector.png" alt="" class="vector">
+            </a>
+        </div>
+    </div>
+</div>
+<div class="bienvenida-cel">
+    <div><img src="./assets/fondo-celu.png" alt="Fondo dolce"  class="img-fondo"></div>
+    <div class="frase-bienvenida">
+        <div class="animate__animated animate__fadeInDownBig animate__slow">
+            <a href="dolcevita.html">
                 <img src="./assets/dolce-frase.png" alt="" class="dolce-img">
             </a>
         </div>
     </div>
+</div>
     <!-- ---------------------------- Js ---------------------------- -->
     <script src="./js/wow.min.js"></script>
     <!-- ---------------------------- Js ---------------------------- -->
