--- a/index.html
+++ b/index.html
@@ -15,31 +15,30 @@
 
 <body>
     <div class="bienvenida-compu">
-    <div><img src="./assets/fondo-bienvenida.png" alt="Fondo dolce"  class="img-fondo"></div>
-    <div class="frase-bienvenida">
-        <div class="animate__animated animate__fadeInDownBig animate__slow">
-            <a href="dolcevita.html">
-                <img src="./assets/Vector-2.png" alt="" class="vector2">
-                <img src="./assets/Vector-1.png" alt="" class="vector1">
-                <img src="./assets/Vector-4.png" alt="" class="vector4">
-                <img src="./assets/Vector.png" alt="" class="vector">
-            </a>
+        <div><img src="./assets/fondo-bienvenida.png" alt="Fondo dolce" class="img-fondo"></div>
+        <div class="frase-bienvenida">
+            <div class="animate__animated animate__fadeInDownBig animate__slow">
+                <a href="dolcevita.html">
+                    <img src="./assets/Vector-2.png" alt="" class="vector2">
+                    <img src="./assets/Vector-1.png" alt="" class="vector1">
+                    <img src="./assets/Vector-4.png" alt="" class="vector4">
+                    <img src="./assets/Vector.png" alt="" class="vector">
+                </a>
+            </div>
         </div>
     </div>
-</div>
-<div class="bienvenida-cel">
-    <div><img src="./assets/fondo-celu.png" alt="Fondo dolce"  class="img-fondo"></div>
-    <div class="frase-bienvenida">
-        <div class="animate__animated animate__fadeInDownBig animate__slow">
-            <a href="dolcevita.html">
-                <img src="./assets/dolce-frase.png" alt="" class="dolce-img">
-            </a>
+    <div class="bienvenida-cel">
+        <div><img src="./assets/fondo-celu.png" alt="Fondo dolce"  class="img-fondo"></div>
+        <div class="frase-bienvenida">
+            <div class="animate__animated animate__fadeInDownBig animate__slow">
+                <a href="dolcevita.html">
+    <img src="./assets/dolce-frase.png" alt="" class="dolce-frase">
+                </a>
         </div>
     </div>
-</div>
-    <!-- ---------------------------- Js ---------------------------- -->
-    <script src="./js/wow.min.js"></script>
-    <!-- ---------------------------- Js ---------------------------- -->
+        <!-- ---------------------------- Js ---------------------------- -->
+        <script src="./js/wow.min.js"></script>
+        <!-- ---------------------------- Js ---------------------------- -->
 </body>
 
 </html>
