--- a/vestidos.html
+++ b/vestidos.html
@@ -178,7 +178,26 @@
         </div>
     </main>
     <footer>
-        <section class="footerstylevestidos">
+        <footer>
+            <section class="footerstylevestidos">
+                <div class="contenedor_logos">
+                    <h3>Seguinos</h3>
+                    <div class="logos2">
+                        <a href="https://www.instagram.com/dolce_vitaprincesas/" target="_blank"><i
+                                class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/dolcevitaprincesas/" target="_blank"><i
+                                class="fa-brands fa-facebook"></i></a>
+                    </div>
+                </div>
+                <section class="contenedor_imgs">
+                    <i class="fa-solid fa-truck"></i>
+                    <p><b>Envios a todo el país</b></p>
+                    <i class="fa-solid fa-credit-card"></i>
+                    <p><b>Todos los medios de pago</b></p>
+                </section>
+            </section>
+        </footer>
+        <section class="footerstylevestidos-cel">
             <div class="contenedor_logos">
                 <h3>Seguinos</h3>
                 <div class="logos2">
