--- a/index2.html
+++ b/index2.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,8 +13,22 @@
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 
-<body class="bienvenida-body">
-    <div class="bienvenida">
+<body>
+    <div class="bienvenida-compu">
+        <div><img src="./assets/fondo-bienvenida.png" alt="Fondo dolce" class="img-fondo"></div>
+        <div class="frase-bienvenida">
+            <div class="animate__animated animate__fadeInDownBig animate__slow">
+                <a href="dolcevita.html">
+                    <img src="./assets/Vector-2.png" alt="" class="vector2">
+                    <img src="./assets/Vector-1.png" alt="" class="vector1">
+                    <img src="./assets/Vector-4.png" alt="" class="vector4">
+                    <img src="./assets/Vector.png" alt="" class="vector">
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="bienvenida-cel">
+        <div><img src="./assets/fondo-celu.png" alt="Fondo dolce"  class="img-fondo"></div>
         <div class="frase-bienvenida">
             <div class="animate__animated animate__fadeInDownBig animate__slow">
                 <a href="dolcevita.html">
