--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="bienvenida-body">
     <div class="bienvenida">
         <div class="frase-bienvenida">
-            <div class="animate__animated animate__fadeInDownBig animate__slow">
+            <div class="animate__animated animate__fadeInDownBig animate__slow animacion" >
                 <a href="dolcevita.html">
     <img src="./assets/dolce-frase.png" alt="" class="dolce-frase">
                 </a>
