--- a/dolcevita.html
+++ b/dolcevita.html
@@ -39,9 +39,9 @@
         <div class="div6">
             <div class="info2">
                 <h2>Dolce Vita</h2>
-                <p>Es una pasión que nace a fines de 2019,<br> inspirada en la pureza, magia e inocenciad<br> de la
+                <p>Es una pasión que nace a fines de 2019,<br> inspirada en la pureza, magia e inocencia<br> de la
                     niñez.<br> Esta marca está destinada a vestir<br> pequeñas princesas, desde su nacimiento<br> hasta
-                    su adolescencia.<br> La colección presenta confecciones de piezas<br> exclusibas y diseños
+                    su adolescencia.<br> La colección presenta confecciones de piezas<br> exclusivas y diseños
                     innovadores de Alta<br> Costura, incorporando moda y tendencia<br> actual, con la impronta de su
                     diseñadora<br> que lo hace original y diferente.
                 </p>
