--- a/materiales.html
+++ b/materiales.html
@@ -40,7 +40,7 @@
             <div class="info2">
                 <h2>Nuestros materiales</h2>
                 <p>Realizamos una eleccion exhaustiva de nuestras telas<br> priorizando la
-                    calidad y el detalle<br> Uso de telas de fiesta,<br> aten, taftan, tules bordados con flores,<br> La colección presenta confecciones de piezas<br> perlas,
+                    calidad y el detalle<br> Uso de telas de fiesta,<br> satén, taftan, tules bordados con flores,<br> La colección presenta confecciones de piezas<br> perlas,
                     apliques, raso de novias<br> encaje de novias, entre otras.<br> 
                 </p>
                 <div class="input-Box2">
