--- a/vestidos.html
+++ b/vestidos.html
@@ -46,6 +46,84 @@
         <div class="row row-cols-1 row-cols-md-3 g-5">
             <div class="col">
                 <div class="card">
+                    <img src="./assets/vestidogotitas.jpg" class="card-img-top1" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>VESTIDO GOTITAS</b></h5>
+                        <p class="card-text">Pechera realizada en paillette plateado y blanco, forrado con satén.<br><a href="talles.html" class="ver-talles">Ver talles</a></p>
+                    </div>
+                </div>
+                <div class="input-Box5">
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                            type="submit" value="Consultar Stock" class="btn-stock"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="./assets/vestidocereza.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>VESTIDO PRINCESA CEREZA</b></h5>
+                        <p class="card-text">Pechera realizada en paillette bordó lentejuelas..<br> <a href="talles.html" class="ver-talles">Ver talles</a></p>
+                    </div>
+                </div>
+                <div class="input-Box5">
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                            type="submit" value="Consultar Stock" class="btn-stock"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="./assets/vestidounicornio.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>VESTIDO UNICORNIO</b></h5>
+                        <p class="card-text">Pechera realizada en raso importado color violeta,con mangas en Tul. <br><a href="talles.html" class="ver-talles">Ver talles</a></p>
+                    </div>
+                </div>
+                <div class="input-Box5">
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                            type="submit" value="Consultar Stock" class="btn-stock"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="./assets/vestidoazul.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>VESTIDO SWEET BLUE</b></h5>
+                        <p class="card-text">Vestido realizado en paillette azul (lentejuelas) forrado en satén elastizado. <br><a href="talles.html" class="ver-talles">Ver talles</a></p>
+                    </div>
+                </div>
+                <div class="input-Box5">
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                            type="submit" value="Consultar Stock" class="btn-stock"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="./assets/vestidoestrella.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>VESTIDO ESTRELLA</b></h5>
+                        <p class="card-text">Vestido realizado en su totalidad en Taftan azul elastizado y forrado con Tul desde la pechera hasta la amplia  falda. <br><a href="talles.html" class="ver-talles">Ver talles</a></p>
+                    </div>
+                </div>
+                <div class="input-Box5">
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                            type="submit" value="Consultar Stock" class="btn-stock"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="./assets/vestidozoe.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>VESTIDO ZOE BAUTIZO</b></h5>
+                        <p class="card-text">Vestido realizado en encaje blanco 3 d forrado en satén en pechera y falda super amplia en raso de novia blanco . <br><a href="talles.html" class="ver-talles">Ver talles</a></p>
+                    </div>
+                </div>
+                <div class="input-Box5">
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                            type="submit" value="Consultar Stock" class="btn-stock"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
                     <img src="./assets/princesaGlamour.png" class="card-img-top1" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>PRINCESA GLAMOUR</b></h5>
@@ -72,89 +150,10 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="./assets/happybirth.png" class="card-img-top" alt="...">
+                    <img src="./assets/happytutu.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>TUTU HAPPY BIRTHDAY</b></h5>
                         <p class="card-text">Pechera lisa, mangas tul bordado con terminación, falda en raso. <br><a href="talles.html" class="ver-talles">Ver talles</a></p>
-                    </div>
-                </div>
-                <div class="input-Box5">
-                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
-                            type="submit" value="Consultar Stock" class="btn-stock"></a>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="./assets/giuliana.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title"><b>GIULIANA</b></h5>
-                        <p class="card-text">Vestido realizado en tul bordado color natural. <br><a href="talles.html" class="ver-talles">Ver talles</a></p>
-                    </div>
-                </div>
-                <div class="input-Box5">
-                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
-                            type="submit" value="Consultar Stock" class="btn-stock"></a>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="./assets/isabella.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title"><b>ISABELLA</b></h5>
-                        <p class="card-text">Pechera lisa, mangas tul bordado con terminación, falda en raso. <br><a href="talles.html" class="ver-talles">Ver talles</a></p>
-                    </div>
-                </div>
-                <div class="input-Box5">
-                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
-                            type="submit" value="Consultar Stock" class="btn-stock"></a>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="./assets/luz.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title"><b>LUZ</b></h5>
-                        <p class="card-text">Pechera lisa, mangas tul bordado con terminación, falda en raso. <br><a href="talles.html" class="ver-talles">Ver talles</a></p>
-                    </div>
-                </div>
-                <div class="input-Box5">
-                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
-                            type="submit" value="Consultar Stock" class="btn-stock"></a>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="./assets/maria.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title"><b>MARIA</b></h5>
-                        <p class="card-text">Pechera realizada en tul bordado, forrado en saten blanco.<br> <a href="talles.html" class="ver-talles">Ver talles</a></p>
-                    </div>
-                </div>
-                <div class="input-Box5">
-                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
-                            type="submit" value="Consultar Stock" class="btn-stock"></a>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="./assets/martina.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title"><b>MARTINA</b></h5>
-                        <p class="card-text">Color manteca, realizado en su totalida con micro tul, forrado con saten. <br><a href="talles.html" class="ver-talles">Ver talles</a>
-                        </p>
-                    </div>
-                </div>
-                <div class="input-Box5">
-                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
-                            type="submit" value="Consultar Stock" class="btn-stock"></a>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="./assets/perla.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title"><b>PERLA</b></h5>
-                        <p class="card-text">Pechera realizada en tul con perlas.<br> <a href="talles.html" class="ver-talles">Ver talles</a></p>
                     </div>
                 </div>
                 <div class="input-Box5">
@@ -175,7 +174,7 @@
                             type="submit" value="Consultar Stock" class="btn-stock"></a>
                 </div>
             </div>
-        </div>
+        </div>  
     </main>
     <footer>
         <footer>
